@@ -76,7 +76,7 @@
         {/if}
     {/if}
 	{if $wormhole->getChain()->isAllowedAction('delete')}
-		<div class="menuitem" onclick="deleteWormhole('{$wormhole->id}', true); closeContextMenu();" style="margin-top: 1em;">
+		<div class="menuitem" onclick="deleteWormhole('{$wormhole->id}', true); closeContextMenu();" style="margin-top: .5em;">
 			<img src="/images/eve/cross.png" align="left" />
 			Remove Connected Systems
 		</div>
